DUMMY: Course title truncate script, add anchors to tiles, fix links

--- a/dummy_site_tim/assets/styles/styles_my_courses.css
+++ b/dummy_site_tim/assets/styles/styles_my_courses.css
@@ -9,12 +9,10 @@
   width: calc(99%/3);
   display: inline-block;
   border-radius: 10px;
-
-  padding: 30px;
+  padding: 30px 30px 0 30px;
   margin: 0px;
   transform: scale(0.95);
   box-shadow: 0 0 6px gray;
-  cursor: pointer;
   transition: all 0.1s ease-in-out;
 }
 .course_tiles .tile:hover {
@@ -25,13 +23,18 @@
 .course_tiles h2 {
   font-family: 'Barlow Semi Condensed', sans-serif;
   font-size: 38px;
+  color: black;
 }
 .course_tiles p {
   font-size: 22px;
   text-align: center;
+  color: black;
 }
 .course_tiles hr {
-  margin: none;
+  color: white;
+}
+.course_tiles a:link:hover {
+  text-decoration: none;
 }
 
 
